--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -130,11 +130,14 @@ android {
     }
 
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.firebase2"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        
+
     }
     splits {
         abi {
