--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,10 @@ target 'firebase2' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-camera', :path => '../node_modules/react-native-camera'
+
+  pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
+
   target 'firebase2Tests' do
     inherit! :complete
     # Pods for testing
