--- a/package.json
+++ b/package.json
@@ -1,47 +1,35 @@
 {
-  "name": "firebase2",
-  "version": "0.0.1",
-  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-native-firebase/app": "^10.5.0",
-    "@react-native-firebase/database": "^10.5.1",
-    "@react-native-firebase/firestore": "^10.5.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.7",
+    "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
-    "firebase": "^8.2.5",
-    "openfoodfac-ts": "^0.3.1",
+    "expo": "~40.0.0",
+    "expo-status-bar": "~1.0.3",
+    "firebase": "7.9.0",
     "react": "16.13.1",
-    "react-native": "0.63.4",
-    "react-native-autoscroll-flatlist": "^1.9.3",
-    "react-native-camera": "^3.42.0",
-    "react-native-elements": "^3.1.0",
-    "react-native-gesture-handler": "^1.9.0",
-    "react-native-permissions": "^2.2.2",
-    "react-native-qrcode-scanner": "^1.5.3",
-    "react-native-reanimated": "^1.13.2",
-    "react-native-safe-area-context": "^3.1.9",
-    "react-native-screens": "^2.17.1",
-    "react-native-vector-icons": "^8.0.0"
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.1",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.2",
+    "react-native-vector-icons": "^8.0.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.19.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.65.0",
-    "react-test-renderer": "16.13.1"
+    "@babel/core": "~7.9.0"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "private": true
 }
