--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^5.12.3",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
+    "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.20",
     "expo": "~40.0.0",
     "expo-barcode-scanner": "^10.0.0",
@@ -56,11 +57,6 @@
       "!**/node_modules/**",
       "!**/babel.config.js",
       "!**/jest.setup.js"
-    ],
-    "typeAcquisition": {
-      "include": [
-        "jest"
-      ]
-    }
+    ]
   }
 }
