--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "expo-barcode-scanner": "^10.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
+    "native-base": "^2.15.2",
     "openfoodfac-ts": "^0.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-auto-scale-image": "^1.0.1",
     "react-native-elements": "^3.2.0",
+    "react-native-fab": "^1.0.17",
+    "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.1",
     "react-native-reanimated": "~1.13.0",
