--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/jest": "^26.0.20",
     "expo": "~40.0.0",
     "expo-barcode-scanner": "^10.0.0",
+    "expo-random": "^11.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
     "native-base": "^2.15.2",
@@ -27,11 +28,13 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-auto-scale-image": "^1.0.1",
+    "react-native-dialog-input": "^1.0.8",
     "react-native-elements": "^3.2.0",
     "react-native-fab": "^1.0.17",
     "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.1",
+    "react-native-popup-menu": "^0.15.9",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
