--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-auto-scale-image": "^1.0.1",
+    "react-native-check-box": "^2.1.7",
     "react-native-dialog-input": "^1.0.8",
     "react-native-elements": "^3.2.0",
     "react-native-fab": "^1.0.17",
     "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-just-checkbox": "^1.0.12",
     "react-native-paper": "^4.7.1",
     "react-native-popup-menu": "^0.15.9",
     "react-native-reanimated": "~1.13.0",
