--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-random": "^11.0.0",
     "expo-status-bar": "~1.0.3",
     "firebase": "7.9.0",
+    "localstorage-polyfill": "^1.0.1",
     "native-base": "^2.15.2",
     "openfoodfac-ts": "^0.3.1",
     "react": "16.13.1",
@@ -36,6 +37,7 @@
     "react-native-floating-action": "^1.21.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-just-checkbox": "^1.0.12",
+    "react-native-mmkv-storage": "^0.5.3",
     "react-native-paper": "^4.7.1",
     "react-native-popup-menu": "^0.15.9",
     "react-native-reanimated": "~1.13.0",
