--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "docs": "node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.7",
@@ -56,6 +57,7 @@
     "jest": "^26.6.3",
     "jest-expo": "^40.0.2",
     "jest-fetch-mock": "^3.0.3",
+    "jsdoc": "^3.6.6",
     "react-native-testing-library": "^6.0.0"
   },
   "private": true,
