--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.14.2",
     "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.20",
+    "better-docs": "^2.3.2",
     "expo": "~40.0.0",
     "expo-barcode-scanner": "^10.0.0",
     "expo-random": "^11.0.0",
