--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^5.14.2",
     "@testing-library/react-native": "^7.1.0",
     "@types/jest": "^26.0.20",
+    "axios": "^0.21.1",
     "better-docs": "^2.3.2",
     "expo": "~40.0.0",
     "expo-barcode-scanner": "^10.0.0",
@@ -55,7 +56,14 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "react-redux-firebase": "^3.10.0",
+    "react-redux-firestore": "^0.0.1",
+    "redux": "^4.0.5",
+    "redux-devtools": "^3.7.0",
+    "redux-firestore": "^0.15.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
