--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jest": "^26.0.20",
     "axios": "^0.21.1",
     "better-docs": "^2.3.2",
+    "core-js": "^3.10.0",
     "expo": "~40.0.0",
     "expo-barcode-scanner": "^10.0.0",
     "expo-random": "^11.0.0",
