--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-settings-page": "^2.0.6",
     "react-native-swipe-list-view": "^3.2.6",
     "react-native-swipeable": "^0.6.0",
     "react-native-vector-icons": "^8.1.0",
