--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-mmkv-storage": "^0.5.3",
     "react-native-paper": "^4.7.1",
     "react-native-popup-menu": "^0.15.9",
+    "react-native-really-awesome-button": "^1.6.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
