--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "openfoodfac-ts": "^0.3.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-input-number": "^5.0.19",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-auto-scale-image": "^1.0.1",
     "react-native-check-box": "^2.1.7",
