--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "docs": "node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/checkbox": "^0.5.7",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
@@ -66,6 +67,7 @@
     "redux-devtools": "^3.7.0",
     "redux-firestore": "^0.15.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0"
   },
